refactor: use the icon element instead of just the icon function

--- a/src/components/input/input.css
+++ b/src/components/input/input.css
@@ -229,6 +229,6 @@
   color: var(--input-color-invalid);
 }
 
-:is(.icon, .error-icon) svg {
+:is(.icon, .error-icon) leu-icon {
   display: block;
 }
