--- a/src/components/select/select.css
+++ b/src/components/select/select.css
@@ -171,7 +171,7 @@
   flex-direction: column;
 
   width: 100%;
-  max-height: var(--auto-size-available-height);
+  max-height: min(var(--auto-size-available-height), 24rem);
 
   padding: 0;
   margin: 0;
@@ -182,12 +182,9 @@
   box-shadow: var(--select-box-shadow-regular), var(--select-box-shadow-short);
 }
 
-.select-menu {
+.menu {
   display: block;
-  padding: 0;
-  margin: 0;
   overflow: auto;
-  max-height: 100%;
 }
 
 .before,
