refactor(menu-item): remove highlighted property

--- a/src/components/menu/menu-item.css
+++ b/src/components/menu/menu-item.css
@@ -43,8 +43,7 @@
 }
 
 .button:hover,
-.button:focus-visible,
-:host([highlighted]) .button {
+.button:focus-visible {
   --background: var(--background-hover);
 }
 
