fix(select): set correct aria attributes
feat(menu): move all focus handling to the menu component

feat(select): set max height of the menu

fix(select): add background to apply button

refactor(select): remove options property. pass menu-items as light dom children.

feat(menu-item): implement getValue method

fix(select): move leu-menu element into the shadow dom so the role is fully controlled

feat(select): use arrow buttons to navigate to listbox from the text input field

feat(select): always close the popup when focus leaves the element

test(select): adjust test to match all the refactoring

fix(menu-item): apply tab-index to the actual interactive element

test(menu): add tests for focus and role handling

test(menu-item): add tabbable and value getter tests

refactor(menu-item): don't use static-html anymore

refactor(menu-item): remove highlighted property

docs: add some more jsdoc

fix: buttons should inherit font-family

--- a/src/components/menu/menu-item.css
+++ b/src/components/menu/menu-item.css
@@ -29,6 +29,7 @@
 
   padding: 0.75rem;
 
+  font-family: inherit;
   font-size: 1rem;
   line-height: 1.5;
   text-align: left;
@@ -43,8 +44,7 @@
 }
 
 .button:hover,
-.button:focus-visible,
-:host([highlighted]) .button {
+.button:focus-visible {
   --background: var(--background-hover);
 }
 
