fix(menu-item): use colors that are WCAG AA compliant

--- a/src/components/menu/menu-item.css
+++ b/src/components/menu/menu-item.css
@@ -6,9 +6,10 @@
 :host {
   --background: var(--leu-color-black-0);
   --background-hover: var(--leu-color-black-10);
-  --background-active: var(--leu-color-func-cyan);
+  --background-active: var(--leu-color-accent-blue);
   --background-disabled: var(--leu-color-black-black-0);
   --color: var(--leu-color-black-transp-60);
+  --color-active: var(--leu-color-black-0);
   --color-disabled: var(--leu-color-black-transp-20);
   --font-regular: var(--leu-font-family-regular);
   --font-black: var(--leu-font-family-black);
@@ -48,8 +49,13 @@
   --background: var(--background-hover);
 }
 
+/*
+ * These colors do not match with the design system (yet).
+ * But at least they are compliant with the WCAG AA contrast ratio.
+ */
 :host([active]) .button {
   --background: var(--background-active);
+  --color: var(--color-active);
 }
 
 :host([disabled]) .button {
