feat(theme): add :host pseudo class so that the theme can be used in a shadow root

--- a/src/styles/custom-properties.css
+++ b/src/styles/custom-properties.css
@@ -1,6 +1,7 @@
 @import url("./custom-media.css");
 
-:root {
+:root,
+:host {
   --leu-color-black-100: #000;
   --leu-color-black-80: #333;
   --leu-color-black-60: #666;
