--- a/src/styles/custom-properties.css
+++ b/src/styles/custom-properties.css
@@ -59,6 +59,7 @@
   --leu-z-index-popup: 100;
 
   @leu-font-styles './font-definitions.json';
+  --leu-t-font-feature-settings: "ss07", "ss08", "cv03", "cv04", "cv10";
 
   /*
    * Grid system
