--- a/src/components/range-slider/range-slider.css
+++ b/src/components/range-slider/range-slider.css
@@ -15,13 +15,6 @@
   --slider-thumb-border-color: var(--slider-color);
   --slider-thumb-hover-border-color: var(--leu-color-black-100);
   --slider-thumb-diameter: 32px;
-  --slider-thumb-border-size: 2px;
-  --slider-from-thumb-offset: 0;
-  --slider-from-value-offset: 0;
-  --slider-to-thumb-offset: 0;
-  --slider-to-value-offset: 0;
-  --slider-from-z-index: 1;
-  --slider-to-z-index: 0;
 
   --slider-value-color: var(--leu-color-black-100);
   --slider-value-color-disabled: var(--slider-color-disabled);
@@ -33,147 +26,6 @@
   box-sizing: border-box;
 
   font-family: var(--slider-font-regular);
-}
-
-.slider-container {
-  position: relative;
-  width: 100%;
-  height: var(--slider-thumb-diameter);
-}
-
-.slider-track,
-.slider-track-value {
-  border-radius: var(--slider-track-radius);
-  height: var(--slider-track-height);
-  max-height: var(--slider-thumb-diameter);
-  position: absolute;
-  top: calc((var(--slider-thumb-diameter) - var(--slider-track-height)) / 2);
-}
-
-.slider-track {
-  background: var(--slider-track-background);
-  width: 100%;
-}
-
-.slider-track-value {
-  background: var(--slider-track-value-color);
-  width: var(--slider-track-value-width);
-  left: var(--slider-track-value-min);
-}
-
-.slider-from-thumb,
-.slider-to-thumb,
-.slider-thumb {
-  box-sizing: border-box;
-  background: var(--slider-thumb-color);
-  border: 2px var(--slider-thumb-border-color) solid;
-  border-radius: 50%;
-  height: var(--slider-thumb-diameter);
-  position: absolute;
-  width: var(--slider-thumb-diameter);
-  top: 0;
-  pointer-events: none;
-}
-
-.slider-thumb {
-  left: calc(var(--pos) * 100%);
-}
-
-.slider-from-thumb {
-  transform: translateX(var(--slider-from-thumb-offset));
-  z-index: var(--slider-from-z-index);
-}
-
-.slider-to-thumb {
-  transform: translateX(var(--slider-to-thumb-offset));
-  z-index: var(--slider-to-z-index);
-}
-
-.slider-from-thumb[disabled],
-.slider-to-thumb[disabled] {
-  border: 2px var(--slider-color-disabled) solid;
-}
-
-.slider-from-value,
-.slider-to-value {
-  display: inline-block;
-
-  position: relative;
-  bottom: 0.25rem;
-
-  text-align: center;
-  font: var(--leu-t-30-black-font);
-  color: var(--slider-value-color);
-}
-
-.slider-from-value {
-  transform: translateX(var(--slider-from-value-offset));
-}
-
-.slider-to-value {
-  transform: translateX(var(--slider-to-value-offset));
-}
-
-.slider-from-value[disabled],
-.slider-to-value[disabled] {
-  color: var(--slider-color-disabled);
-}
-
-.slider-from-value-track {
-  text-align: center;
-  height: 22px;
-  margin-top: 0.75rem;
-}
-
-.slider-to-value-track {
-  text-align: center;
-  height: 0;
-  transform: translateY(-22px);
-}
-
-.input-range::-moz-range-thumb {
-  appearance: none;
-  pointer-events: all;
-  width: var(--slider-thumb-diameter);
-  height: var(--slider-thumb-diameter);
-  border-radius: 50%;
-}
-
-.input-range::-webkit-slider-thumb {
-  appearance: none;
-  pointer-events: all;
-  width: var(--slider-thumb-diameter);
-  height: var(--slider-thumb-diameter);
-  border-radius: 50%;
-}
-
-.input-range {
-  appearance: none;
-  display: inline-block;
-  height: var(--slider-thumb-diameter);
-  margin: 0;
-  opacity: 0;
-  position: absolute;
-  width: 100%;
-  cursor: pointer;
-  pointer-events: none;
-}
-
-.input-range__from {
-  z-index: calc(var(--slider-from-z-index) + 10);
-}
-
-.input-range__to {
-  z-index: calc(var(--slider-to-z-index) + 10);
-}
-
-.input-range:disabled {
-  cursor: not-allowed;
-}
-
-.slider-container:hover > .slider-from-thumb,
-.slider-container:hover > .slider-to-thumb {
-  --slider-thumb-border-color: var(--slider-thumb-hover-border-color);
 }
 
 :host([disabled]) {
@@ -267,10 +119,14 @@
   cursor: not-allowed;
 }
 
-.range:focus::-moz-range-thumb {
-  border-color: var(--slider-thumb-hover-border-color);
+.range:focus-visible::-moz-range-thumb {
   outline: 2px solid var(--slider-color-focus);
   outline-offset: 2px;
+}
+
+.range::-moz-range-thumb:hover,
+.range:focus-visible::-moz-range-thumb {
+  border-color: var(--slider-thumb-hover-border-color);
 }
 
 .range::-webkit-slider-thumb {
@@ -293,9 +149,13 @@
 }
 
 .range:focus::-webkit-slider-thumb {
-  border-color: var(--slider-thumb-hover-border-color);
   outline: 2px solid var(--slider-color-focus);
   outline-offset: 2px;
+}
+
+.range:focus::-webkit-slider-thumb,
+.range::-webkit-slider-thumb:hover {
+  border-color: var(--slider-thumb-hover-border-color);
 }
 
 /* Track */
