--- a/src/components/dialog/dialog.css
+++ b/src/components/dialog/dialog.css
@@ -10,8 +10,10 @@
 :host {
   --dialog-font-regular: var(--leu-font-family-regular);
   --dialog-font-black: var(--leu-font-family-black);
+  --dialog-font-feature-settings: var(--leu-t-font-feature-settings);
 
   font-family: var(--dialog-font-regular);
+  font-feature-settings: var(--dialog-font-feature-settings);
 }
 
 .dialog {
@@ -84,6 +86,7 @@
 
 .title {
   font: var(--leu-t-curve-big-black-font);
+  font-feature-settings: var(--dialog-font-feature-settings);
   margin: 0 0 0.75rem;
   order: 2;
 
