--- a/src/components/input/input.css
+++ b/src/components/input/input.css
@@ -28,9 +28,11 @@
 
   --input-font-regular: var(--leu-font-family-regular);
   --input-font-black: var(--leu-font-family-black);
+  --input-font-feature-settings: var(--leu-t-font-feature-settings);
 
   display: block;
   font-family: var(--input-font-regular);
+  font-feature-settings: var(--input-font-feature-settings);
 }
 
 :host([disabled]) {
