--- a/src/components/pagination/pagination.css
+++ b/src/components/pagination/pagination.css
@@ -3,6 +3,7 @@
   display: flex;
   justify-content: end;
   font-family: var(--leu-font-family-regular);
+  font-feature-settings: var(--leu-t-font-feature-settings);
 }
 
 .input {
