--- a/src/components/select/select.css
+++ b/src/components/select/select.css
@@ -28,6 +28,7 @@
 
   --select-font-regular: var(--leu-font-family-regular);
   --select-font-black: var(--leu-font-family-black);
+  --select-font-feature-settings: var(--leu-t-font-feature-settings);
 
   --select-apply-button-color: var(--leu-color-black-100);
   --select-apply-button-color-focus: var(--leu-color-black-80);
@@ -40,6 +41,7 @@
   display: block;
 
   font-family: var(--select-font-regular);
+  font-feature-settings: var(--select-font-feature-settings);
 }
 
 :host([disabled]) {
@@ -93,6 +95,7 @@
   top: 1.5rem;
   transition: top 0.1s ease;
   font-family: var(--select-font-regular);
+  font-feature-settings: var(--select-font-feature-settings);
 }
 
 .clear-button {
@@ -135,6 +138,7 @@
 .select-toggle:focus .label {
   color: var(--select-label-color);
   font-family: var(--select-font-black);
+  font-feature-settings: var(--select-font-feature-settings);
   font-size: 0.75rem;
 
   top: 0.875rem;
