--- a/src/components/checkbox/checkbox.css
+++ b/src/components/checkbox/checkbox.css
@@ -9,6 +9,7 @@
   --checkbox-tick-color: var(--leu-color-black-0);
 
   --checkbox-font-regular: var(--leu-font-family-regular);
+  --checkbox-font-feature-settings: var(--leu-t-font-feature-settings);
 
   position: relative;
 
@@ -17,6 +18,7 @@
   gap: 0.5rem;
 
   font-family: var(--checkbox-font-regular);
+  font-feature-settings: var(--checkbox-font-feature-settings);
 }
 
 .checkbox {
